Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-12-20 Kimmo
 BUG: [ 1606583 ] VC6 build is broken
  Backout of patch [ 1603769 ] Send MergeCmdLineInfo between instances
  Src: MainFrm.cpp Merge.cpp MergeCmdLineInfo.cpp MergeCmdLineInfo.h
 Bump ShellExtension version to 1.10
  ShellExtension: ShellExtension.rc
 BUG: [ 1619689 ] Filefilter: ASP.NET Devel
  Filters: ASPNET.flt

2006-12-19 Kimmo
 PATCH: [ 1618358 ] Fix warning about non-standard extension with enum
  Src: MainFrm.cpp
 PATCH: [ 1618364 ] Make GPL URL const string
  Src: MainFrm.cpp

2006-12-18 Kimmo
 PATCH: [ 1617502 ] Cleanup use of enum in MovedLines
  Src: MovedLines.cpp

2006-12-17 Gal
 BUG: [ 1614558 ] Goto line doesn't work when word wrap is enabled
  Src: MergeEditView.cpp

2006-12-14 Kimmo
 BUG: [ 1602219 ] Crappy save of project files
  Src: MainFrm.cpp ProjectFilePathsDlg.cpp

2006-12-13 Kimmo
 PATCH: [ 1614442 ] Swedish translation update for WinMerge 2.6.2
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2006-12-13 Gal
 BUG: [ 1584068 ] location pane is inaccurate when word wrap is on (2)
  Src: LocationView.cpp LocationView.h MergeEditView.cpp

2006-12-11 Kimmo
 Fix error in logical condition for checking if item is directory
  Src: FileInfo.cpp
 PATCH: [ 1610998 ] Splash screen does not stop timer
  Src: Splash.cpp
 PATCH: [ 1611060 ] Move constants from Merge.cpp to FileOrFolderSelect.cpp
  Src: FileOrFolderSelect.cpp Merge.cpp

2006-12-10 Gal
 BUG: [ 1611542 ] "Wrap lines" does not work for diff pane
  Src: MergeDiffDetailView.cpp MergeDiffDetailView.h

2006-12-10 Takashi
 PATCH: [ 1447744 ] Match lines inside diff blocks (based on Perry's patch)
  Src new files: MergeDocDiffSync.cpp
  Src: DiffList.h Merge.dsp Merge.rc MergeDoc.cpp MergeDoc.h OptionsDef.h OptionsInit.cpp 
   PropCompare.cpp PropCompare.h resource.h
  Src/Languages/*: Merge*.rc

2006-12-10 Gal