@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-12-20 Takashi
+ BUG: [ 1603061 ] "Copy Left/Right To .." doesn't work correctly(2)
+  Src: FileActionScript.cpp DirActions.cpp
+
 2006-12-20 Kimmo
  BUG: [ 1606583 ] VC6 build is broken
   Backout of patch [ 1603769 ] Send MergeCmdLineInfo between instances
